Documentation of producer's routes #15
